# cli-tool-homework

./: .gitignore  Cargo.toml  README.md  recipients.txt
src/: constants.rs  lib.rs  main.rs
src/cli/: interface.rs
src/executor/: client.rs  mod.rs  rpc.rs
src/utils/: custom_io_tools.rs  custom_rpc_tool.rs  mod.rs
